--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Signika+Negative&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -24,6 +24,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  font-style: 'Montserrat', sans-serif;
 }
 .searchBox::-webkit-scrollbar {
   display: none;
